--- a/source/manifest.json
+++ b/source/manifest.json
@@ -1,13 +1,13 @@
 {
   "name": "Time Code Jumper for YouTube",
   "version": "1.0.0",
-  "description": "This is extension for YouTube lets you scroll back to a comment which you clicked a time code from.",
-  "homepage_url": "https://maxdiachenko.com/youtube-time-code-jumper-extension",
+  "description": "This extension for YouTube lets you scroll back to a comment which you clicked a time code from",
+  "homepage_url": "https://maxdiachenko.com/youtube-time-code-jumper",
   "manifest_version": 3,
   "minimum_chrome_version": "100",
   "browser_specific_settings": {
 	"gecko": {
-	  "id": "youtube-time-code-jumper-extension@maxdiachenko.com",
+	  "id": "youtube-time-code-jumper@maxdiachenko.com",
 	  "strict_min_version": "100.0"
 	}
   },
